docs: remove gallery binaries